removed site image from html page

--- a/templates/infoWindow.html
+++ b/templates/infoWindow.html
@@ -20,5 +20,11 @@
 		<tr>
 			<td class='col1'>Sun elevation:</td><td>${sun_elevation}</td>
 		</tr>
+		<tr>
+			<td class='col1'>Predicted class:</td><td>${predicted_class_label}</td>
+		</tr>
+		<tr>
+			<td class='col1'>Validated class:</td><td>${actual_class_label}</td>
+		</tr>
 	</table>
 </div>
